--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
     "@types/react": "^18.2.17",
     "@types/react-dom": "^18.2.7",
     "astro": "^2.9.6",
+    "html-pdf-client": "^1.0.2",
+    "pdfjs-dist": "^3.9.179",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-pdf": "^7.3.0",
+    "simple-pdf-viewer": "^2.0.3",
     "tailwindcss": "^3.3.3"
   }
 }
